--- a/backend-java/src/main/resources/application.yaml
+++ b/backend-java/src/main/resources/application.yaml
@@ -7,3 +7,7 @@ spring:
     multipart:
       maxFileSize: '100MB'
       max-request-size: '110MB'
+  h2:
+    console:
+      enabled: true
+      
