--- a/angular-gui/package.json
+++ b/angular-gui/package.json
@@ -25,6 +25,7 @@
     "@ngrx/entity": "^8.1.0",
     "@ngrx/store": "^8.1.0",
     "@ngrx/store-devtools": "^8.1.0",
+    "loaders.css": "^0.1.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
