--- a/backend-java/src/main/resources/application.yaml
+++ b/backend-java/src/main/resources/application.yaml
@@ -7,7 +7,20 @@ spring:
     multipart:
       maxFileSize: '100MB'
       max-request-size: '110MB'
-  h2:
-    console:
-      enabled: true
-      
+#  h2:
+#    console:
+#      enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    database-platform: org.hibernate.dialect.Oracle10gDialect
+  datasource:
+    url: 'jdbc:oracle:thin:@localhost:1521:WMS'
+    username: FISO
+    password: password
+    driver-class-name: oracle.jdbc.OracleDriver
+    platform: oracle
+#    initialization-mode: always
+#    hikari:
+#      connection-timeout: 60000
+#      maximum-pool-size: 5
