Added move task creation procedure, Added order lines refresh after releasing order header, Disabling buttons on order details screen,

--- a/backend-java/src/main/resources/application.yaml
+++ b/backend-java/src/main/resources/application.yaml
@@ -33,5 +33,5 @@ spring:
 #        SQL: DEBUG
 application:
   load-test-data: true
-  load-sql-constraints: false
+  load-sql-constraints: true
   load-sql-data: false
