--- a/backend-java/src/main/resources/application.yaml
+++ b/backend-java/src/main/resources/application.yaml
@@ -35,4 +35,4 @@ application:
   load-test-data: true
   load-sql-constraints: true
   load-sql-data: false
-  java-processing: false
+  java-processing: true
