--- a/backend-java/src/main/resources/application.yaml
+++ b/backend-java/src/main/resources/application.yaml
@@ -11,28 +11,7 @@ spring:
     console:
       enabled: false
   jpa:
-    show-sql: false
-    database-platform: org.hibernate.dialect.Oracle10gDialect
     generate-ddl: true
     hibernate:
-      ddl-auto: create-drop
-  datasource:
-    url: 'jdbc:oracle:thin:@localhost:1521:WMS'
-    username: FISO
-    password: asdf
-    driver-class-name: oracle.jdbc.OracleDriver
-    platform: oracle
-    initialization-mode: always
-    hikari:
-      connection-timeout: 60000
-      maximum-pool-size: 5
-#logging:
-#  level:
-#    org:
-#      hibernate:
-#        SQL: DEBUG
-application:
-  load-test-data: true
-  load-sql-constraints: true
-  load-sql-data: false
-  java-processing: true
+      ddl-auto: update
+
