added shipping module and functionality, added order number in picking, added status changes in picking and order header as well

--- a/backend-java/src/main/resources/application-oracle.yaml
+++ b/backend-java/src/main/resources/application-oracle.yaml
@@ -12,5 +12,5 @@ spring:
       connection-timeout: 60000
       maximum-pool-size: 5
 application:
-  load-sql-constraints: true
-  java-processing: false
+  load-sql-constraints: false
+  java-processing: true
