--- a/backend-java/src/main/resources/application-oracle.yaml
+++ b/backend-java/src/main/resources/application-oracle.yaml
@@ -2,9 +2,9 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.Oracle10gDialect
   datasource:
-    url: 'jdbc:oracle:thin:@localhost:1521:WMS'
-    username: FISO
-    password: asdf
+    # url: 'jdbc:oracle:thin:@localhost:1521:WMS'
+    # username: FISO
+    # password: asdf
     driver-class-name: oracle.jdbc.OracleDriver
     platform: oracle
     initialization-mode: always
